# Raspberry_Pico

./: .gitmodules  README.md  flake.nix
BME680/: BME680.c  BME680.h  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.c
BME680/pico-sdk/: Makefile  cmake_install.cmake
BME680/pico-sdk/docs/: Makefile
BME680/pico-sdk/src/: Makefile  cmake_install.cmake
BME680/pico-sdk/src/common/: Makefile  cmake_install.cmake
BME680/pico-sdk/src/common/boot_picoboot/: Makefile
BME680/pico-sdk/src/common/boot_uf2/: Makefile
BME680/pico-sdk/src/common/pico_base/: Makefile
BME680/pico-sdk/src/common/pico_binary_info/: Makefile
BME680/pico-sdk/src/common/pico_bit_ops/: Makefile
BME680/pico-sdk/src/common/pico_divider/: Makefile
BME680/pico-sdk/src/common/pico_stdlib/: Makefile
BME680/pico-sdk/src/common/pico_sync/: Makefile
BME680/pico-sdk/src/common/pico_time/: Makefile
BME680/pico-sdk/src/common/pico_usb_reset_interface/: Makefile
BME680/pico-sdk/src/common/pico_util/: Makefile
BME680/pico-sdk/src/rp2040/: Makefile  cmake_install.cmake
BME680/pico-sdk/src/rp2040/hardware_regs/: Makefile
BME680/pico-sdk/src/rp2040/hardware_structs/: Makefile
BME680/pico-sdk/src/rp2_common/: Makefile  cmake_install.cmake
BME680/pico-sdk/src/rp2_common/boot_stage2/: Makefile
BME680/pico-sdk/src/rp2_common/cmsis/: Makefile
BME680/pico-sdk/src/rp2_common/hardware_adc/: Makefile  cmake_install.cmake
BME680/pico-sdk/src/rp2_common/hardware_base/: Makefile
BME680/pico-sdk/src/rp2_common/hardware_claim/: Makefile
BME680/pico-sdk/src/rp2_common/hardware_clocks/: Makefile
BME680/pico-sdk/src/rp2_common/hardware_divider/: Makefile
BME680/pico-sdk/src/rp2_common/hardware_dma/: Makefile
BME680/pico-sdk/src/rp2_common/hardware_exception/: Makefile
BME680/pico-sdk/src/rp2_common/hardware_flash/: Makefile
BME680/pico-sdk/src/rp2_common/hardware_gpio/: Makefile  cmake_install.cmake
BME680/pico-sdk/src/rp2_common/hardware_i2c/: Makefile
BME680/pico-sdk/src/rp2_common/hardware_interp/: Makefile
BME680/pico-sdk/src/rp2_common/hardware_irq/: Makefile
BME680/pico-sdk/src/rp2_common/hardware_pio/: Makefile
BME680/pico-sdk/src/rp2_common/hardware_pll/: Makefile
BME680/pico-sdk/src/rp2_common/hardware_pwm/: Makefile
BME680/pico-sdk/src/rp2_common/hardware_resets/: Makefile
BME680/pico-sdk/src/rp2_common/hardware_rtc/: Makefile
BME680/pico-sdk/src/rp2_common/hardware_spi/: Makefile
BME680/pico-sdk/src/rp2_common/hardware_sync/: Makefile
BME680/pico-sdk/src/rp2_common/hardware_timer/: Makefile
BME680/pico-sdk/src/rp2_common/hardware_uart/: Makefile
BME680/pico-sdk/src/rp2_common/hardware_vreg/: Makefile
BME680/pico-sdk/src/rp2_common/hardware_watchdog/: Makefile
BME680/pico-sdk/src/rp2_common/hardware_xosc/: Makefile
BME680/pico-sdk/src/rp2_common/pico_async_context/: Makefile
BME680/pico-sdk/src/rp2_common/pico_bit_ops/: Makefile
BME680/pico-sdk/src/rp2_common/pico_bootrom/: Makefile
BME680/pico-sdk/src/rp2_common/pico_bootsel_via_double_reset/: Makefile
BME680/pico-sdk/src/rp2_common/pico_btstack/: Makefile
BME680/pico-sdk/src/rp2_common/pico_cxx_options/: Makefile
BME680/pico-sdk/src/rp2_common/pico_cyw43_arch/: Makefile  cmake_install.cmake
BME680/pico-sdk/src/rp2_common/pico_cyw43_driver/: Makefile  cmake_install.cmake
BME680/pico-sdk/src/rp2_common/pico_cyw43_driver/cybt_shared_bus/: Makefile
BME680/pico-sdk/src/rp2_common/pico_divider/: Makefile
BME680/pico-sdk/src/rp2_common/pico_double/: Makefile
BME680/pico-sdk/src/rp2_common/pico_fix/: Makefile  cmake_install.cmake
BME680/pico-sdk/src/rp2_common/pico_fix/rp2040_usb_device_enumeration/: Makefile  cmake_install.cmake
BME680/pico-sdk/src/rp2_common/pico_flash/: Makefile  cmake_install.cmake
BME680/pico-sdk/src/rp2_common/pico_float/: Makefile
BME680/pico-sdk/src/rp2_common/pico_i2c_slave/: Makefile  cmake_install.cmake
BME680/pico-sdk/src/rp2_common/pico_int64_ops/: Makefile
BME680/pico-sdk/src/rp2_common/pico_lwip/: Makefile
BME680/pico-sdk/src/rp2_common/pico_malloc/: Makefile
BME680/pico-sdk/src/rp2_common/pico_mbedtls/: Makefile  cmake_install.cmake
BME680/pico-sdk/src/rp2_common/pico_mem_ops/: Makefile
BME680/pico-sdk/src/rp2_common/pico_multicore/: Makefile  cmake_install.cmake
BME680/pico-sdk/src/rp2_common/pico_platform/: Makefile
BME680/pico-sdk/src/rp2_common/pico_printf/: Makefile  cmake_install.cmake
BME680/pico-sdk/src/rp2_common/pico_rand/: Makefile
BME680/pico-sdk/src/rp2_common/pico_runtime/: Makefile
BME680/pico-sdk/src/rp2_common/pico_standard_link/: Makefile
BME680/pico-sdk/src/rp2_common/pico_stdio/: Makefile  cmake_install.cmake
BME680/pico-sdk/src/rp2_common/pico_stdio_semihosting/: Makefile
BME680/pico-sdk/src/rp2_common/pico_stdio_uart/: Makefile
BME680/pico-sdk/src/rp2_common/pico_stdio_usb/: Makefile
BME680/pico-sdk/src/rp2_common/pico_stdlib/: Makefile
BME680/pico-sdk/src/rp2_common/pico_unique_id/: Makefile
BME680/pico-sdk/src/rp2_common/tinyusb/: Makefile
BME680/pico-sdk/tools/: Makefile
LCD/: CMakeLists.txt  LCD.c
LCD/src/: LCD.c
LCD/src/modules/: lcd_1602_i2c.c  lcd_1602_i2c.h  pico_liquidcrystal.c  pico_liquidcrystal.h
LED_Matrix/: CMakeLists.txt
LED_Matrix/src/: main.c
LED_Matrix/src/modules/: is31fl3731.c  is31fl3731.h  led_matrix_i2c.c  led_matrix_i2c.h
RFID/: CMakeLists.txt
RFID/src/: main.c
RFID/src/modules/: mfrc522.c  mfrc522.h  spi.c  spi.h
Weather_Forecast/: BME680.c  CMakeLists.txt  DPS310.c  DPS310.h  SHT4x.c  basic.c  basic.h  weather_forecast.c
Weather_Forecast/Data/: data.py
Weather_Forecast/src/: weather_forecast.c
Weather_Forecast/src/core/: FreeRTOSConfig.h  usb_cdc.c
Weather_Forecast/src/modules/: BME680.c  BME680.h  DPS310.c  DPS310.h  SHT4x.c  SHT4x.h  basic.c  led.c  led.h  usb_cdc.c
freeRTOS/: CMakeLists.txt
freeRTOS/Blink/: CMakeLists.txt  main.c
freeRTOS/src/: main.c
